--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "@baloian/lib": "github:baloian/lib",
-    "moment-timezone": "^0.5.43"
+    "moment-timezone": "^0.5.43",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/msgpack5": "^3.4.3",
