--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "alpaca-tax",
+  "name": "alpaca-fifo",
   "version": "0.0.1",
-  "description": "Alpaca Tax Calculator",
+  "description": "Alpaca Orders To FIFI Tax",
   "author": "Artiom Baloian <artiom.baloian@gmail.com>",
-  "main": "dist/alpacatax.js",
-  "types": "dist/alpacatax.d.ts",
+  "main": "dist/alpacafifo.js",
+  "types": "dist/alpacafifo.d.ts",
   "files": [
     "dist"
   ],
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/baloian/alpaca-tax.git"
+    "url": "https://github.com/baloian/alpaca-fifo.git"
   },
   "dependencies": {
     "@baloian/lib": "github:baloian/lib",
