--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@baloian/lib": "github:baloian/lib",
+    "dotenv": "^16.3.1",
     "moment-timezone": "^0.5.43",
     "zod": "^3.22.4"
   },
