--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
     "start": "tsc && NODE_ENV=${NODE_ENV-development} node dist/main.js",
-    "dev": "tsc && NODE_ENV=${NODE_ENV-development} node dist/main.js"
+    "dev": "tsc && NODE_ENV=${NODE_ENV-development} node dist/main.js",
+    "test": "jest"
   },
   "engines": {
     "node": ">=20.3.0"
@@ -25,9 +26,11 @@
     "@baloian/lib": "github:baloian/lib",
     "dotenv": "^16.3.1",
     "moment-timezone": "^0.5.43",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/msgpack5": "^3.4.3",
     "@types/node": "^20.9.0",
     "@types/readable-stream": "^4.0.2",
@@ -37,6 +40,8 @@
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
