--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/moment": "^2.13.0",
     "@types/msgpack5": "^3.4.3",
     "@types/node": "^20.9.0",
     "@types/readable-stream": "^4.0.2",
