--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@baloian/lib": "github:baloian/lib",
     "dotenv": "^16.3.1",
     "moment-timezone": "^0.5.43",
+    "pdfreader": "^3.0.2",
     "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
