--- a/package.json
+++ b/package.json
@@ -25,15 +25,11 @@
   "dependencies": {
     "@baloian/lib": "github:baloian/lib",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
-    "moment-timezone": "^0.5.43",
-    "ts-node": "^10.9.2",
-    "zod": "^3.22.4"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/moment": "^2.13.0",
     "@types/msgpack5": "^3.4.3",
     "@types/node": "^20.9.0",
     "@types/readable-stream": "^4.0.2",
