Defined and implemented HoodQueue

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@baloian/lib-ts": "github:baloian/lib-ts",
     "csv-parser": "^3.0.0",
     "fs": "^0.0.1-security",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-ds-lib": "^0.3.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
